tests/general/if_missing_definition_end.sl
word main
    1 if
        0
    end